vlib/v/parser/tests/if_guard_undefined_variable_err.vv
module main

fn main() {
	if f := f.g.x() {
	}
}
